change base url

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: http://127.0.0.1:4000
-baseurl: ""
+url: http://migsalazar.com/
+baseurl: "http://migsalazar.com/"
 topnav_title: Curso de Java
 site_title:
 company_name: Mig Salazar
