change base url

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: http://migsalazar.com/
-baseurl: "http://migsalazar.com/"
+url: http://migsalazar.com/java-course
+baseurl: "http://migsalazar.com/java-course"
 topnav_title: Curso de Java
 site_title:
 company_name: Mig Salazar
